--- a/root/index.html
+++ b/root/index.html
@@ -6,11 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world</h1>
-    <script type="module" src="main.js"></script>
-    <!-- have to make sure i pick the type "module" -->
+    <div id="root"></div>
+
+<h1>hello world</h1>
+<script src="main.js"> </script>
 </body>
-
-
-
 </html>
